[package]
name = "balancebeam"
version = "0.1.0"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
httparse = "1.3"
http = "0.2"
log = "0.4"
env_logger = "0.7"
pretty_env_logger = "0.4"
threadpool = "1.8"
tokio = { version = "0.2", features = ["full"] }
rand = "0.7"
parking_lot = "0.10"

[dev-dependencies]
nix = "0.17"
hyper = "0.13"
reqwest = "0.10"
async-trait = "0.1"
